@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.043.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.009.
 use strict;
 use warnings;
 
@@ -41,7 +41,7 @@ my %WriteMakefileArgs = (
     "Statocles::Test" => 0,
     "Term::ANSIColor" => 0,
     "Test::Deep" => 0,
-    "Test::More" => "0.89",
+    "Test::More" => 0,
     "constant" => "1.03",
     "lib" => 0
   },
@@ -69,7 +69,7 @@ my %FallbackPrereqs = (
   "Statocles::Test" => 0,
   "Term::ANSIColor" => 0,
   "Test::Deep" => 0,
-  "Test::More" => "0.89",
+  "Test::More" => 0,
   "constant" => "1.03",
   "lib" => 0,
   "namespace::autoclean" => 0,
@@ -77,7 +77,7 @@ my %FallbackPrereqs = (
   "warnings" => 0
 );
 
-# inserted by Dist::Zilla::Plugin::DynamicPrereqs 0.019
+# inserted by Dist::Zilla::Plugin::DynamicPrereqs 0.032
 # Interop for "with"
 runtime_requires("Beam::Wire",1.016) if has_module("Beam::Wire","<1.016");
 
@@ -93,15 +93,18 @@ delete $WriteMakefileArgs{CONFIGURE_REQUIRES}
 
 WriteMakefile(%WriteMakefileArgs);
 
-# inserted by Dist::Zilla::Plugin::DynamicPrereqs 0.019
+# inserted by Dist::Zilla::Plugin::DynamicPrereqs 0.032
 sub _add_prereq {
   my ($mm_key, $module, $version_or_range) = @_;
+  $version_or_range ||= 0;
   warn "$module already exists in $mm_key -- need to do a sane metamerge!"
     if exists $WriteMakefileArgs{$mm_key}{$module}
-      and $WriteMakefileArgs{$mm_key}{$module} ne ($version_or_range || 0);
+      and $WriteMakefileArgs{$mm_key}{$module} ne '0'
+      and $WriteMakefileArgs{$mm_key}{$module} ne $version_or_range;
   warn "$module already exists in FallbackPrereqs -- need to do a sane metamerge!"
-    if exists $FallbackPrereqs{$module} and $FallbackPrereqs{$module} ne ($version_or_range || 0);
-  $WriteMakefileArgs{$mm_key}{$module} = $FallbackPrereqs{$module} = $version_or_range || 0;
+    if exists $FallbackPrereqs{$module} and $FallbackPrereqs{$module} ne '0'
+        and $FallbackPrereqs{$module} ne $version_or_range;
+  $WriteMakefileArgs{$mm_key}{$module} = $FallbackPrereqs{$module} = $version_or_range;
   return;
 }
 
