@@ -1,6 +1,8 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.001003
+ [Changed / test requires]
+ - Test::More 0.89 → 0
 
 0.001002 2016-02-26T06:52:21Z
 
