@@ -1,6 +1,12 @@
 Release history for Statocles-AppRole-ExtraFeeds
 
 {{$NEXT}}
+ - Bugfix: Avoid test failures with -Ddefault_inc_excludes_dot
+
+ [Dependencies::Stats]
+ - Dependencies changed since 0.001002, see misc/*.deps* for details
+ - develop: +1 ↑1 (suggests: ↑2)
+ - test: ↓1
 
 0.001002 2016-02-26T06:52:21Z 8cbb246
  - Remove unused import in tests that will break in a future Statocles release
